--- a/app/views/diagnoses/_diagnosis.html.erb
+++ b/app/views/diagnoses/_diagnosis.html.erb
@@ -1,6 +1,6 @@
      <tr>
-	<td><%= link_to "#{diagnosis.diag_code}", diagnosis %> </td>
-	<td><%= diagnosis.diag_descr %></td> 
+	<td><%= link_to "#{diagnosis.code}", diagnosis %> </td>
+	<td><%= diagnosis.descr %></td> 
 	<td><%= diagnosis.prob_type %> </td> 
      </tr>
 
