--- a/app/views/diagnoses/_form.html.erb
+++ b/app/views/diagnoses/_form.html.erb
@@ -2,10 +2,10 @@
   <%= render 'shared/error_messages', object: f.object %>
 
   <%= f.label :'Diagnostic Code' %>
-  <%= f.text_field :diag_code, class: 'form-control' %>
+  <%= f.text_field :code, class: 'form-control' %>
 
   <%= f.label :'Description' %>
-  <%= f.text_field :diag_descr, class: 'form-control' %>
+  <%= f.text_field :descr, class: 'form-control' %>
 
   <%= f.label :'Problem Type' %>
   <%= f.text_field :prob_type, class: 'form-control' %>
