--- a/app/views/billings/show.html.erb
+++ b/app/views/billings/show.html.erb
@@ -28,13 +28,14 @@
 <% if current_user.admin?  %>
     <section class="new_visit">
       <aside class="col-md-2">
-            <%= button_to "Edit Billing", edit_billing_path(@billing), class: "btn btn-primary", :method => "get" %>
+            <%# button_to "Edit Billing", edit_billing_path(@billing), class: "btn btn-primary", :method => "get" #%>
       </aside>
     </section>
 <% end %>
 
   </aside>
 </div>
+
 
 </div>
 
