--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,38 +1,35 @@
-<%= form_for (@user), class: "form-horizontal" do |f| %>
+<%= form_for (@user)  do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
 
-  <%= f.label :Username, class: "col-sm-2 control-label"%>
-  <div class="col-sm-10">
+  <%= f.label :Username, class: "col-md-6 control-label"%>
+  <div class="col-md-6">
   <%= f.text_field :name, class: "form-control" %>
   </div>
 
-  <%= f.label :Email, class: "col-sm-2 control-label" %>
-  <div class="col-sm-10">
+  <%= f.label :Email, class: "col-md-6 control-label" %>
+  <div class="col-md-6">
   <%= f.email_field :email, class: "form-control" %>
   </div>
 
-  <%= f.label :Password, class: "col-sm-2 control-label" %>
-  <div class="col-sm-10">
+  <%= f.label :Password, class: "col-md-6 control-label" %>
+  <div class="col-md-6">
   <%= f.password_field :password, class: 'form-control' %>
   </div>
 
-
-  <div class="form-group">
-  <%= f.label :Password_confirmation, class: "col-sm-2 control-label" %>
-  <div class="col-sm-10">
+  <%= f.label :Password_confirmation, class: "col-md-6 control-label" %>
+  <div class="col-md-6">
   <%= f.password_field :password_confirmation, class: "form-control" %>
   </div>
-  </div>
 
-  <div class="col-sm-2">
+  <div class="col-md-6">
   <%= f.label :Administrator, class: "control-label" %> 
   </div>
-  <div class="col-sm-8">
+  <div class="col-md-6">
   <%= f.check_box :admin  %>
   </div>
 
-  <div class="col-sm-2">&nbsp;</div>
-  <div class="col-sm-12">
+  <div class="col-md-6">&nbsp;</div>
+  <div class="col-md-6">
   <%= f.submit yield(:button_text), class: "btn btn-primary" %>
   </div
 
