--- a/app/views/visits/_form.html.erb
+++ b/app/views/visits/_form.html.erb
@@ -1,33 +1,14 @@
 <%= form_with model: [@patient, @visit],  class: "form-horizontal" do |f| %> <!-- <%#, :url => patient_visits_path  do |f| %> -->
   <%= render 'shared/error_messages', object: f.object %>
 
-  <% @doctors = get_active_doctors %>
-  <%= f.label 'Doctor ', class: "col-sm-2 control-label" %>
+  <%= f.label "Doctor", class: "col-sm-2 control-label" %>
   <div class="col-sm-10">
-  <%= f.select (:doc_id) do %>
-  <% @doctors.each do |d| -%>
-    <%= content_tag(:option, d.lname, value: d.id) %>
-  <% end %>
-  <% end %>
+  <%= f.collection_select(:doc_id, get_active_doctors, :id, :lname)  %>
   </div>
-
-<%
-=begin %>
-  <% @diagnoses = get_diagnoses %>
-  <%= f.label "Diagnosis", class: "col-sm-2 control-label" %>
-  <div class="col-sm-10">
-  <%= f.select (:diag_code) do %>
-  <% @diagnoses.each do |d| -%>
-	  <%= content_tag(:option, d.diag_code, value: d.diag_code) %> 
-  <% end %>
-  <% end %>
-  </div>
-<%
-=end %>
 
   <%= f.label "Diagnosis", class: "col-sm-2 control-label" %>
   <div class="col-sm-10">
-  <%=  f.collection_select(:diag_code, Diagnosis.all, :diag_code, :diag_code ) %> <!-- ,  {:selected => @visit.diag_code}) -->
+  <%=  f.collection_select(:diag_code, Diagnosis.all, :code, :code ) %> <!-- ,  {:selected => @visit.code}) -->
   </div>
   
   <%= f.label "Procedure", class: "col-sm-2 control-label" %>
@@ -52,7 +33,7 @@
   
   <%= f.label "Notes", class: "col-sm-2 control-label" %>
   <div class="col-sm-10">
-  <%= f.text_area :notes, class: 'form-control', cols: 25, rows: 5, placeholder: 'Notes' %>
+  <%= f.text_area :notes, class: 'form-control', cols: 25, rows:10, placeholder: 'Notes' %>
   </div>
 
 
