--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -27,5 +27,6 @@
   </tbody>
 </table>
 </ul>
-<%= will_paginate(@patients) %> <!-- , :renderer =>  WillPaginate::ActionView::LinkRenderer, class: 'pagination-sm') %> -->
+
+<%= will_paginate(@patients) %> 
 
