--- a/app/views/billings/index.html.erb
+++ b/app/views/billings/index.html.erb
@@ -1,12 +1,6 @@
 <% provide(:title, 'All billing') %>
   
-<% if @not_found %>
-  <div id="error_explanation">
-   Bill <%= params[:findstr] %> was not found"
-  </div>
-<% end %>
-
-<h1> Billings for <%= params['date'] %> (<%= @billings.count %>)</h1>
+<h1> Billings for <%= params['date'] %> (<%= @visits.count %>)</h1>
 
 <ul class="users">
 <table style="width:100%; padding: 10px;"> <!--class="table table-hover table-condensed" > -->
@@ -15,24 +9,20 @@
           <th>Patient</th>
           <th>Doctor</th>
           <th>Procedure</th>
-          <th>Units</th>
-          <th>Fee</th>
+          <th>Duration</th>
           <th>Diagnosis</th>
+          <th>Fee</th>
           <th>Type</th>
           <th>Status</th>
-	  <th>Remit File</th>
-	  <th>Submitted</th>
-          <th>Paid </th>
-	  <th>Amt.Paid</th>
-          <th>MOH Ref</th>
+	  <th>Entry By</th>
+	  <th>Entry Date</th>
+	  <th>Note</th>
       </tr>
   </thead>
   <tbody>
-
-  <%= render @billings %>
-
+	  <%= render partial: "billing", collection: @visits %>
   </tbody>
 </table>
 </ul>
 
-<%= will_paginate(@billings) %> 
+<%= will_paginate(@visits) %> 
