--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -25,6 +25,8 @@
     <section class="buttons">
 	    
     <%= button_to "New Visit", new_patient_visit_path(@patient), class:"btn btn-primary", method: 'get' %>
+    <p>
+    <%= button_to "Edit Patient", edit_patient_path(@patient), class:"btn btn-primary", method: 'get' %>
 
     </section>
   </aside>
