--- a/app/views/visits/index.html.erb
+++ b/app/views/visits/index.html.erb
@@ -1,10 +1,7 @@
 <% provide(:title, 'All visits') %>
 
-<%= will_paginate(@visits, :renderer =>  WillPaginate::ActionView::LinkRenderer, class: 'pagination-sm') %>
-<p>
-
 <ul class="users">
-<table style="width:1000px; padding: 10px;" >
+<table style="width:100%; padding: 10px;" >
   <thead>
       <tr>
           <th>Pat Id</th>
@@ -19,10 +16,12 @@
 	  Visits: <%= @visits.count %> 
 
   <%= render @visits %>
-  
+
   </tbody>
 </table>
 </ul>
+
 <p>
-<%= will_paginate(@visits, :renderer =>  WillPaginate::ActionView::LinkRenderer, class: 'pagination-sm') %>
+<%= will_paginate(@visits) %>
+
 
