few form changes

--- a/app/views/diagnoses/_diagnosis.html.erb
+++ b/app/views/diagnoses/_diagnosis.html.erb
@@ -2,6 +2,7 @@
 	<td><%= link_to "#{diagnosis.code}", diagnosis %> </td>
 	<td><%= diagnosis.descr %></td> 
 	<td><%= diagnosis.prob_type %> </td> 
+	<td><%= diagnosis.active %> </td> 
      </tr>
 
 
