--- a/app/views/procedures/_procedure.html.erb
+++ b/app/views/procedures/_procedure.html.erb
@@ -4,13 +4,9 @@
 	<td><%= procedure.descr %></td> 
 	<td><%= procedure.cost %></td> 
 	<td><%= procedure.unit %></td> 
-	<td><%= procedure.fac_req %></td> 
-	<td><%= procedure.adm_req %></td> 
 	<td><%= procedure.diag_req %></td> 
-	<td><%= procedure.ref_req %></td> 
-	<td><%= procedure.percent %></td> 
 	<td><%= procedure.eff_date %></td> 
-	<td><%= procedure.term_date %></td> 
+	<td><%= procedure.active %></td> 
      </tr>
 
 
