--- a/app/views/procedures/index.html.erb
+++ b/app/views/procedures/index.html.erb
@@ -11,13 +11,9 @@
           <th>Description </th>
 	  <th>Cost</th>
 	  <th>Unit</th>
-	  <th>fac req?</th>
-	  <th>adm req?</th>
 	  <th>diag req?</th>
-	  <th>ref req?</th>
-	  <th>percent</th>
 	  <th>Eff Date</th>
-	  <th>Term. Date</th>
+	  <th>Active</th>
       </tr>
   </thead>
   <tbody>
