--- a/app/views/diagnoses/index.html.erb
+++ b/app/views/diagnoses/index.html.erb
@@ -7,6 +7,7 @@
           <th>Code</th>
           <th>Description</th>
           <th>Problem type </th>
+          <th>Active? </th>
       </tr>
   </thead>
   <tbody>
