visits form changes

--- a/app/views/diagnoses/show.html.erb
+++ b/app/views/diagnoses/show.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, @diagnosis.code) %>
 
-	<h1>Diagnoses <%= @diagnosis.code %> - details  </h1>
+	<h1>Diagnosis <%= @diagnosis.code %> - details  </h1>
 
 <div class="row justify-content-md-center">
     <div class="col-md-6 col-md-offset-3">
