--- a/app/views/visits/show.html.erb
+++ b/app/views/visits/show.html.erb
@@ -3,17 +3,19 @@
 <div>
 	<h1> <%= @patient.full_name %> : Visit of <%= time_tag(@visit.entry_ts) =%> </h1>
 
+<% diag = Diagnosis.find_by(code: @visit.diag_code) %>
+<% codes = [@visit.proc_code, @visit.proc_code2, @visit.proc_code3, @visit.proc_code4] %>
 <div class="row">
   <aside class="col-md-6">
     <section class="user_info">
       <h1>
 	   <pre>
 		Doctor :    <%= @visit.doctor.lname %>
-		Diagnosis : <%= @visit.diag_code %> 
-		Procedure : <%= @visit.proc_code %>
+		Diagnosis : <%= @visit.diag_code %> : <%= diag.descr %>
+		Procedure(s) : <%=  codes.join(',') %>
   		Type: <%= @visit.vis_type %>
-  		Duration: <%= @visit.duration %>
-		Status: <%= $statuses[@visit.status] %> <%= @visit.status %>
+  		Duration: <%= @visit.duration %> minutes
+		Status: <%= $statuses[@visit.status][0] %> 
   		Entry by: <%= @visit.entry_by %>
   		Entered at: <%= @visit.entry_ts %>
 		Notes: <%= @visit.notes %>	     
