--- a/app/views/doctors/_doctor.html.erb
+++ b/app/views/doctors/_doctor.html.erb
@@ -5,11 +5,9 @@
 	<td><%= doctor.specialty %></td>
 	<td><%= doctor.provider_no %> </td>
 	<td><%= doctor.group_no %> </td> 
-	<td><%= doctor.district %> </td> 
-	<td><%= doctor.address %> </td> 
+	<td><%= doctor.bills %> </td> 
 	<td><%= doctor.city %> </td> 
 	<td><%= doctor.phone %> </td> 
-	<td><%= doctor.email %> </td> 
      </tr>
 
 
