--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -12,11 +12,9 @@
           <th>Specialty</th>
           <th>Provider#</th>
           <th>Group#</th>
-          <th>District</th>
-          <th>Address</th>
+          <th>Bills?</th>
           <th>City</th>
           <th>Phone </th>
-          <th>email </th>
       </tr>
   </thead>
   <tbody>
