--- a/app/views/daysheet/index.html.erb
+++ b/app/views/daysheet/index.html.erb
@@ -14,6 +14,7 @@
   <col width="80">
   <col width="50">
   <col width="50">
+  <col width="30">
   <col width="200">
       <tr>
           <th>Time</th>
@@ -21,6 +22,7 @@
  	  <th>Doctor</th>
           <th>Diagnosis</th>
           <th>Procedure(s)</th>
+          <th>Status</th>
           <th>Notes</th>
       </tr>
   </thead>
