--- a/app/views/daysheet/_visit.html.erb
+++ b/app/views/daysheet/_visit.html.erb
@@ -6,6 +6,7 @@
 	<td><%= visit.doctor.lname %></td>
 	<td><%= visit.diag_code %></td>
 	<td><%= visit.proc_codes %></td>
+	<td><%= $statuses[visit.status-1][0] %></td>
 	<td><%= visit.notes.to_s.first(40)+ '..'  %></td>
 
 </tr>
